# mlcourse.ai

./: .gitignore  README.md  _config.yml  _toc.yml  pyproject.toml
_build/.doctrees/: LICENSE.doctree  README.doctree  environment.pickle
_build/.doctrees/book/: CONTRIBUTING.doctree  index.doctree
_build/.jupyter_cache/: global.db
_build/html/: .buildinfo  LICENSE.html  README.html  genindex.html  objects.inv  search.html  searchindex.js
_build/html/book/: CONTRIBUTING.html  index.html
book/jupyter_english/assignments_demo/: _config.yml  _toc.yml
book/jupyter_english/topic05_ensembles_random_forests/: topic5_part1_bagging.ipynb  topic5_part3_feature_importance.ipynb
book/topic01/: assignment01_pandas_uci_adult.ipynb  topic01_intro.md  topic1_pandas_data_analysis.ipynb
jupyter_english/topic01_pandas_data_analysis/: topic1_practice_pandas_titanic.ipynb
jupyter_english/topic02_visual_data_analysis/: topic2_practice_visual_titanic.ipynb
jupyter_english/topic03_decision_trees_kNN/: a3-demo-decision-trees.ipynb  topic3_decision_trees_kNN.ipynb
jupyter_russian/topic04_linear_models/: lesson4_practice_alice_benchmarks.ipynb
mlcourse_ai_jupyter_book/: _toc.yml
mlcourse_ai_jupyter_book/book/topic01/: assignment01_pandas_uci_adult.ipynb  assignment01_pandas_uci_adult.md  assignment01_pandas_uci_adult_solution.ipynb  assignment01_pandas_uci_adult_solution.md  topic01_pandas_data_analysis.ipynb  topic01_pandas_data_analysis.md
mlcourse_ai_jupyter_book/book/topic02/: assignment02_analyzing_cardiovascular_desease_data.ipynb  topic2_visual_data_analysis.ipynb  (+5 more)
(+174 files in other folders)
