[tool.poetry]
name = "mlcourse.ai"
version = "0.1.0"
description = "Open Machine Learnig course"
authors = ["Yury Kashnitsky <yury.kashnitsky@gmail.com>"]
license = "CCBY-4.0"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
matplotlib = "^3.3.4"
jupyter-book = "^0.10.1"
scikit-learn = "^0.24.1"
pre-commit = "^2.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
